fixed code formatting, removed whitespace

--- a/CCC.MVC/Content/Site.css
+++ b/CCC.MVC/Content/Site.css
@@ -36,10 +36,6 @@ footer p {
     margin-top: 7px;
 }
 
-.line-number-check {
-
-}
-
 .control-container {
     display: flex;
     justify-content: space-between;
